Add ordering to test